(null) try comparing low & high curvature 10% percentiles of SC molecules

--- a/fig-dataset-topology-sc-nicked-catsnet-segmented.ipynb
+++ b/fig-dataset-topology-sc-nicked-catsnet-segmented.ipynb
@@ -76,31 +76,61 @@
    "outputs": [],
    "source": [
     "# plot violin of length based on basename\n",
-    "sns.violinplot(data=remove_datapoints_outside_n_std(df_allstats, column=\"total_contour_length\", n_std=3), x=\"basename\", y=\"total_contour_length\", inner=\"point\")\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_allstats, column=\"total_contour_length\", n_std=3),\n",
+    "    x=\"basename\",\n",
+    "    y=\"total_contour_length\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
     "plt.ylabel(\"Contour Length (nm)\")\n",
     "plt.show()\n",
     "\n",
     "# plot num of plusses or minuses based on basename\n",
-    "sns.violinplot(data=remove_datapoints_outside_n_std(df_allstats, column=\"num_plusses_or_minuses\", n_std=3), x=\"basename\", y=\"num_plusses_or_minuses\", inner=\"point\")\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_allstats, column=\"num_plusses_or_minuses\", n_std=3),\n",
+    "    x=\"basename\",\n",
+    "    y=\"num_plusses_or_minuses\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
     "plt.ylabel(\"Number of crossings\")\n",
     "plt.show()\n",
     "\n",
     "# volume\n",
-    "sns.violinplot(data=remove_datapoints_outside_n_std(df_allstats, column=\"volume\", n_std=3), x=\"basename\", y=\"volume\", inner=\"point\")\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_allstats, column=\"volume\", n_std=3),\n",
+    "    x=\"basename\",\n",
+    "    y=\"volume\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
     "plt.ylabel(\"Volume (nm^3)\")\n",
     "plt.show()\n",
     "\n",
     "# height min\n",
-    "sns.violinplot(data=remove_datapoints_outside_n_std(df_allstats, column=\"height_min\", n_std=3), x=\"basename\", y=\"height_min\", inner=\"point\")\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_allstats, column=\"height_min\", n_std=3),\n",
+    "    x=\"basename\",\n",
+    "    y=\"height_min\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
     "plt.ylabel(\"Minimum Height (nm)\")\n",
     "plt.show()\n",
     "\n",
     "# height median\n",
-    "sns.violinplot(data=remove_datapoints_outside_n_std(df_allstats, column=\"height_median\", n_std=3), x=\"basename\", y=\"height_median\", inner=\"point\")\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_allstats, column=\"height_median\", n_std=3),\n",
+    "    x=\"basename\",\n",
+    "    y=\"height_median\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
     "plt.ylabel(\"Median Height (nm)\")\n",
     "plt.show()\n",
     "# height mean\n",
-    "sns.violinplot(data=remove_datapoints_outside_n_std(df_allstats, column=\"height_mean\", n_std=3), x=\"basename\", y=\"height_mean\", inner=\"point\")\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_allstats, column=\"height_mean\", n_std=3),\n",
+    "    x=\"basename\",\n",
+    "    y=\"height_mean\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
     "plt.ylabel(\"Mean Height (nm)\")\n",
     "plt.show()"
    ]
@@ -123,7 +153,7 @@
     "loadscans_dicts_nic = loadscans_nic.img_dict\n",
     "loadscans_sc = LoadScans(img_paths=files_ts_sc, channel=\"dummy\")\n",
     "loadscans_sc.get_data()\n",
-    "loadscans_dicts_sc = loadscans_sc.img_dict\n"
+    "loadscans_dicts_sc = loadscans_sc.img_dict"
    ]
   },
   {
@@ -151,9 +181,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plotting = False\n",
+    "verbose = False\n",
     "stats_curvature_list = []\n",
     "for image_name, image_data in loadscans_dicts.items():\n",
     "    sample_type = image_data[\"sample_type\"]\n",
+    "    if verbose:\n",
+    "        print(image_data.keys())\n",
     "    if \"grain_curvature_stats\" not in image_data:\n",
     "        print(f\"No grain curvature data for {image_name}\")\n",
     "        continue\n",
@@ -168,6 +202,53 @@
     "            percentile_25_curvature = np.percentile(mol_curvatures, 25)\n",
     "            percentile_75_curvature = np.percentile(mol_curvatures, 75)\n",
     "            percentile_iqr_curvature = percentile_75_curvature - percentile_25_curvature\n",
+    "\n",
+    "            image = image_data[\"image\"]\n",
+    "            if plotting:\n",
+    "                plt.imshow(image)\n",
+    "                plt.show()\n",
+    "            p2nm = image_data[\"pixel_to_nm_scaling\"]\n",
+    "\n",
+    "            ordered_traces_data = image_data[\"ordered_traces\"][\"above\"][grain_id][mol_id]\n",
+    "            ordered_coords = ordered_traces_data[\"ordered_coords\"]\n",
+    "            ordered_heights = ordered_traces_data[\"heights\"]\n",
+    "            if plotting:\n",
+    "                plt.imshow(image)\n",
+    "                plt.plot(ordered_coords[:, 1], ordered_coords[:, 0], \"o-\", label=\"Trace\", markersize=1)\n",
+    "                plt.show()\n",
+    "                plt.plot(ordered_heights)\n",
+    "                plt.show()\n",
+    "\n",
+    "            smoothed_traces_data = image_data[\"splining\"][\"above\"][grain_id][mol_id]\n",
+    "            smoothed_trace_bbox = smoothed_traces_data[\"bbox\"]\n",
+    "            smoothed_trace_coords = smoothed_traces_data[\"spline_coords\"] + np.array(\n",
+    "                [smoothed_trace_bbox[0], smoothed_trace_bbox[1]]\n",
+    "            )\n",
+    "            # smoothed coords are floats, in pixels, convert to int\n",
+    "            smoothed_trace_coords_int = np.round(smoothed_trace_coords).astype(int)\n",
+    "            smoothed_trace_heights = image[smoothed_trace_coords_int[:, 0], smoothed_trace_coords_int[:, 1]]\n",
+    "            if plotting:\n",
+    "                plt.imshow(image)\n",
+    "                plt.plot(\n",
+    "                    smoothed_trace_coords[:, 1],\n",
+    "                    smoothed_trace_coords[:, 0],\n",
+    "                    \"o-\",\n",
+    "                    label=\"Smoothed Trace\",\n",
+    "                    markersize=1,\n",
+    "                )\n",
+    "                plt.plot(smoothed_trace_coords[0, 1], smoothed_trace_coords[0, 0], \"o\", markersize=5, color=\"yellow\")\n",
+    "                plt.show()\n",
+    "                plt.plot(smoothed_trace_heights)\n",
+    "                plt.show()\n",
+    "\n",
+    "            diffs_px = np.diff(smoothed_trace_coords, axis=0)\n",
+    "            distances_px = np.linalg.norm(diffs_px, axis=1)\n",
+    "            total_distance_px = np.sum(distances_px)\n",
+    "            total_distance_nm = total_distance_px * p2nm\n",
+    "\n",
+    "            heights_percentile_10 = np.percentile(smoothed_trace_heights, 10)\n",
+    "            heights_percentile_25 = np.percentile(smoothed_trace_heights, 25)\n",
+    "\n",
     "            stats_curvature_list.append(\n",
     "                {\n",
     "                    \"image_name\": image_name,\n",
@@ -181,35 +262,106 @@
     "                    \"percentile_25_curvature\": percentile_25_curvature,\n",
     "                    \"percentile_75_curvature\": percentile_75_curvature,\n",
     "                    \"percentile_iqr_curvature\": percentile_iqr_curvature,\n",
-    "                    \"total_curvature\": np.sum(mol_curvatures)\n",
+    "                    \"total_curvature\": np.sum(mol_curvatures),\n",
+    "                    \"total_distance_nm\": total_distance_nm,\n",
+    "                    \"heights_percentile_10\": heights_percentile_10,\n",
+    "                    \"heights_percentile_25\": heights_percentile_25,\n",
+    "                    \"total_curvature_over_total_length\": np.sum(mol_curvatures) / total_distance_nm\n",
     "                }\n",
     "            )\n",
     "\n",
-    "df_stats_curvature = pd.DataFrame(stats_curvature_list)\n",
+    "\n",
+    "df_stats_curvature = pd.DataFrame(stats_curvature_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06a61f5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# plot min curvature based on sample type\n",
-    "sns.violinplot(data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"min_curvature\", n_std=3), x=\"sample_type\", y=\"min_curvature\", inner=\"point\")\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"min_curvature\", n_std=3),\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"min_curvature\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
     "plt.ylabel(\"Minimum Curvature (1/nm)\")\n",
     "plt.show()\n",
     "# plot max curvature based on sample type\n",
-    "sns.violinplot(data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"max_curvature\", n_std=3), x=\"sample_type\", y=\"max_curvature\", inner=\"point\")\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"max_curvature\", n_std=3),\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"max_curvature\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
     "plt.ylabel(\"Maximum Curvature (1/nm)\")\n",
     "plt.show()\n",
     "# plot mean curvature based on sample type\n",
-    "sns.violinplot(data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"mean_curvature\", n_std=3), x=\"sample_type\", y=\"mean_curvature\", inner=\"point\")\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"mean_curvature\", n_std=3),\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"mean_curvature\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
     "plt.ylabel(\"Mean Curvature (1/nm)\")\n",
     "plt.show()\n",
     "# plot std curvature based on sample type\n",
-    "sns.violinplot(data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"std_curvature\", n_std=3), x=\"sample_type\", y=\"std_curvature\", inner=\"point\")\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"std_curvature\", n_std=3),\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"std_curvature\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
     "plt.ylabel(\"Standard Deviation of Curvature (1/nm)\")\n",
     "plt.show()\n",
     "# plot iqr curvature based on sample type\n",
-    "sns.violinplot(data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"percentile_iqr_curvature\", n_std=3), x=\"sample_type\", y=\"percentile_iqr_curvature\", inner=\"point\")\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"percentile_iqr_curvature\", n_std=3),\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"percentile_iqr_curvature\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
     "plt.ylabel(\"Interquartile Range of Curvature (1/nm)\")\n",
     "plt.show()\n",
     "# plot total curvature based on sample type\n",
-    "sns.violinplot(data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"total_curvature\", n_std=3), x=\"sample_type\", y=\"total_curvature\", inner=\"point\")\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"total_curvature\", n_std=3),\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"total_curvature\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
     "plt.ylabel(\"Total Curvature (1/nm)\")\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# grab the sc data that has total curvature above 50\n",
+    "df_sc_high_total_curvature = df_stats_curvature[\n",
+    "    (df_stats_curvature[\"sample_type\"] == \"supercoiled\") & (df_stats_curvature[\"total_curvature\"] > 50)\n",
+    "]\n",
+    "df_sc_low_total_curvature = df_stats_curvature[\n",
+    "    (df_stats_curvature[\"sample_type\"] == \"supercoiled\") & (df_stats_curvature[\"total_curvature\"] <= 50)\n",
+    "]\n",
+    "\n",
+    "# plot nth height percentile of sc high curvature against nth height percentile sc low curvature\n",
+    "fig, ax = plt.subplots()\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_sc_high_total_curvature, column=\"heights_percentile_10\", n_std=5),\n",
+    "    x=1,\n",
+    "    y=\"heights_percentile_10\",\n",
+    "    inner=\"point\",\n",
+    "    label=\"high curvature\",\n",
+    "    ax=ax\n",
+    ")\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_sc_low_total_curvature, column=\"heights_percentile_10\", n_std=5),\n",
+    "    x=2,\n",
+    "    y=\"heights_percentile_10\",\n",
+    "    inner=\"point\",\n",
+    "    label=\"low curvature\",\n",
+    "    ax=ax\n",
+    ")"
    ]
   }
  ],
