redo curvature using better method

--- a/fig-dataset-topology-sc-nicked-catsnet-segmented.ipynb
+++ b/fig-dataset-topology-sc-nicked-catsnet-segmented.ipynb
@@ -12,8 +12,14 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from scipy.ndimage import gaussian_filter1d\n",
     "\n",
-    "from topostats.io import LoadScans"
+    "from topostats.io import LoadScans\n",
+    "from topostats.tracing.splining import resample_points_regular_interval, windowTrace\n",
+    "from topostats.measure.curvature import (\n",
+    "    discrete_angle_difference_per_nm_circular,\n",
+    "    discrete_angle_difference_per_nm_linear,\n",
+    ")"
    ]
   },
   {
@@ -65,7 +71,17 @@
     "\n",
     "df_allstats[\"num_plusses\"] = df_allstats[\"writhe_string\"].apply(calculate_num_char_in_string, character=\"+\")\n",
     "df_allstats[\"num_minuses\"] = df_allstats[\"writhe_string\"].apply(calculate_num_char_in_string, character=\"-\")\n",
-    "df_allstats[\"num_plusses_or_minuses\"] = df_allstats[\"num_plusses\"] + df_allstats[\"num_minuses\"]"
+    "df_allstats[\"num_plusses_or_minuses\"] = df_allstats[\"num_plusses\"] + df_allstats[\"num_minuses\"]\n",
+    "\n",
+    "# get unique grain endpoints\n",
+    "print(df_allstats[\"grain_endpoints\"].unique())\n",
+    "remove_grains_with_endpoints = True\n",
+    "if remove_grains_with_endpoints:\n",
+    "    num_before_removal = len(df_allstats)\n",
+    "    # remove all rows that have grain_endpoints not equal to 0\n",
+    "    df_allstats = df_allstats[df_allstats[\"grain_endpoints\"] == 0]\n",
+    "    num_after_removal = len(df_allstats)\n",
+    "    print(f\"Removed {num_before_removal - num_after_removal} rows with grain_endpoints != 0\")"
    ]
   },
   {
@@ -181,8 +197,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "trace_resampling_distance_nm = 2.0\n",
     "plotting = False\n",
     "verbose = False\n",
+    "smoothing_window_size_nm = 5\n",
+    "curvature_gaussian_sigma_nm = 2.0\n",
+    "curvature_gaussian_sigma_points = int(curvature_gaussian_sigma_nm / trace_resampling_distance_nm)\n",
+    "\n",
     "stats_curvature_list = []\n",
     "for image_name, image_data in loadscans_dicts.items():\n",
     "    sample_type = image_data[\"sample_type\"]\n",
@@ -249,6 +270,33 @@
     "            heights_percentile_10 = np.percentile(smoothed_trace_heights, 10)\n",
     "            heights_percentile_25 = np.percentile(smoothed_trace_heights, 25)\n",
     "\n",
+    "            # manually re-calculate curvature again from ordered trace\n",
+    "\n",
+    "            redone_smoothed_trace_coords_px = windowTrace.pool_trace_circular(\n",
+    "                pixel_trace=smoothed_trace_coords,\n",
+    "                rolling_window_size=smoothing_window_size_nm,\n",
+    "                pixel_to_nm_scaling=p2nm,\n",
+    "            )\n",
+    "\n",
+    "            # resample the path\n",
+    "            resampled_path_px = resample_points_regular_interval(\n",
+    "                points=redone_smoothed_trace_coords_px,\n",
+    "                interval=trace_resampling_distance_nm / p2nm,\n",
+    "                circular=True,\n",
+    "            )\n",
+    "\n",
+    "            resampled_diffs_px = np.diff(resampled_path_px, axis=0)\n",
+    "            resampled_distances_px = np.linalg.norm(resampled_diffs_px, axis=1)\n",
+    "            resampled_distances_nm = resampled_distances_px * p2nm\n",
+    "\n",
+    "            redone_curvatures = discrete_angle_difference_per_nm_circular(trace_nm=resampled_path_px * p2nm)\n",
+    "            redone_curvatures = gaussian_filter1d(\n",
+    "                redone_curvatures,\n",
+    "                sigma=curvature_gaussian_sigma_points,\n",
+    "                mode=\"nearest\",\n",
+    "            )\n",
+    "            redone_curvatures = np.abs(redone_curvatures)\n",
+    "\n",
     "            stats_curvature_list.append(\n",
     "                {\n",
     "                    \"image_name\": image_name,\n",
@@ -266,12 +314,32 @@
     "                    \"total_distance_nm\": total_distance_nm,\n",
     "                    \"heights_percentile_10\": heights_percentile_10,\n",
     "                    \"heights_percentile_25\": heights_percentile_25,\n",
-    "                    \"total_curvature_over_total_length\": np.sum(mol_curvatures) / total_distance_nm\n",
+    "                    \"total_curvature_over_total_length\": np.sum(mol_curvatures) / total_distance_nm,\n",
+    "                    \"redone_total_distance_nm\": np.sum(resampled_distances_nm),\n",
+    "                    \"redone_total_curvature\": np.sum(redone_curvatures),\n",
+    "                    \"redone_total_curvature_over_total_length\": np.sum(redone_curvatures)\n",
+    "                    / np.sum(resampled_distances_nm),\n",
+    "                    \"redone_curvatures_mean\": np.mean(redone_curvatures),\n",
+    "                    \"redone_curvatures_std\": np.std(redone_curvatures),\n",
+    "                    \"redone_curvatures_min\": np.min(redone_curvatures),\n",
+    "                    \"redone_curvatures_max\": np.max(redone_curvatures),\n",
+    "                    \"redone_curvatures_percentile_25\": np.percentile(redone_curvatures, 25),\n",
+    "                    \"redone_curvatures_percentile_75\": np.percentile(redone_curvatures, 75),\n",
+    "                    \"redone_curvatures_percentile_iqr\": np.percentile(redone_curvatures, 75)\n",
+    "                    - np.percentile(redone_curvatures, 25),\n",
     "                }\n",
     "            )\n",
     "\n",
     "\n",
     "df_stats_curvature = pd.DataFrame(stats_curvature_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84b2b30f",
+   "metadata": {},
+   "source": [
+    "## original curvature stats"
    ]
   },
   {
@@ -335,6 +403,15 @@
     ")\n",
     "plt.ylabel(\"Total Curvature (1/nm)\")\n",
     "plt.show()\n",
+    "# total curvature per length\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"total_curvature_over_total_length\", n_std=5),\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"total_curvature_over_total_length\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
+    "plt.ylabel(\"Total Curvature / total length (1/nm^2)\")\n",
+    "plt.show()\n",
     "\n",
     "# grab the sc data that has total curvature above 50\n",
     "df_sc_high_total_curvature = df_stats_curvature[\n",
@@ -352,7 +429,7 @@
     "    y=\"heights_percentile_10\",\n",
     "    inner=\"point\",\n",
     "    label=\"high curvature\",\n",
-    "    ax=ax\n",
+    "    ax=ax,\n",
     ")\n",
     "sns.violinplot(\n",
     "    data=remove_datapoints_outside_n_std(df_sc_low_total_curvature, column=\"heights_percentile_10\", n_std=5),\n",
@@ -360,8 +437,105 @@
     "    y=\"heights_percentile_10\",\n",
     "    inner=\"point\",\n",
     "    label=\"low curvature\",\n",
-    "    ax=ax\n",
+    "    ax=ax,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a923fe8e",
+   "metadata": {},
+   "source": [
+    "## redone curvature stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e99031d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# min\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"redone_curvatures_min\", n_std=3),\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"redone_curvatures_min\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
+    "plt.show()\n",
+    "# max\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"redone_curvatures_max\", n_std=3),\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"redone_curvatures_max\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
+    "plt.show()\n",
+    "# mean\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"redone_curvatures_mean\", n_std=3),\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"redone_curvatures_mean\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
+    "plt.show()\n",
+    "# std\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"redone_curvatures_std\", n_std=3),\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"redone_curvatures_std\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
+    "plt.show()\n",
+    "# iqr\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"redone_curvatures_percentile_iqr\", n_std=3),\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"redone_curvatures_percentile_iqr\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
+    "plt.show()\n",
+    "# 25th percentile\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"redone_curvatures_percentile_25\", n_std=3),\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"redone_curvatures_percentile_25\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
+    "plt.show()\n",
+    "# 75th percentile\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"redone_curvatures_percentile_75\", n_std=3),\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"redone_curvatures_percentile_75\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
+    "plt.show()\n",
+    "# total curvature\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"redone_total_curvature\", n_std=3),\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"redone_total_curvature\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
+    "plt.show()\n",
+    "# total curvature per length\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"redone_total_curvature_over_total_length\", n_std=5),\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"redone_total_curvature_over_total_length\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
+    "plt.show()\n",
+    "# total distance\n",
+    "sns.violinplot(\n",
+    "    data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"redone_total_distance_nm\", n_std=3),\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"redone_total_distance_nm\",\n",
+    "    inner=\"point\",\n",
+    ")\n",
+    "plt.show()\n"
    ]
   }
  ],
