[figures] dataset exploration: switch dataset

--- a/fig-dataset-separation.ipynb
+++ b/fig-dataset-separation.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "base_dir = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/picoz-nicked-sc\")\n",
     "assert base_dir.exists()\n",
-    "output_dir = base_dir / \"output_std_10\"\n",
+    "output_dir = base_dir / \"output_abs_07\"\n",
     "assert output_dir.exists()\n",
     "\n",
     "df_allstats = pd.read_csv(output_dir / \"all_statistics.csv\")\n",
@@ -64,12 +64,13 @@
     "# with increased smoothing\n",
     "sns.violinplot(data=remove_datapoints_outside_n_std(df_allstats, \"num_plusses_or_minuses\", 3), x=\"basename\", y=\"num_plusses_or_minuses\")\n",
     "plt.xticks(ticks=[0, 1], labels=[\"PicoZ Supercoiled\", \"PicoZ Nicked\"])\n",
-    "plt.ylabel(\"Number of crossings\")\n",
+    "plt.ylabel(\"\")\n",
     "plt.show()\n",
     "sns.histplot(data=remove_datapoints_outside_n_std(df_allstats, \"num_plusses_or_minuses\", 3), x=\"basename\", hue=\"num_plusses_or_minuses\", multiple=\"dodge\", shrink=0.8)\n",
     "# rename the xlabels to be more descriptive\n",
     "plt.xticks(ticks=[0, 1], labels=[\"PicoZ Supercoiled\", \"PicoZ Nicked\"])\n",
     "plt.ylabel(\"Number of crossings\")\n",
+    "plt.xlabel(\"\")\n",
     "plt.show()\n",
     "\n",
     "sns.violinplot(data=remove_datapoints_outside_n_std(df_allstats, \"smallest_bounding_area\", 3), x=\"basename\", y=\"smallest_bounding_area\")\n",
