[figures] topology dataset: include sample value counts

--- a/fig-dataset-topology-sc-nicked-catsnet-segmented.ipynb
+++ b/fig-dataset-topology-sc-nicked-catsnet-segmented.ipynb
@@ -91,6 +91,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# print number of samples per basename\n",
+    "counts = df_allstats[\"basename\"].value_counts()\n",
+    "print(counts)\n",
+    "\n",
     "# plot violin of length based on basename\n",
     "sns.violinplot(\n",
     "    data=remove_datapoints_outside_n_std(df_allstats, column=\"total_contour_length\", n_std=3),\n",
