[figures] fig ordered-tracing: add branch index plot

--- a/fig-ordered-tracing.ipynb
+++ b/fig-ordered-tracing.ipynb
@@ -60,9 +60,7 @@
     "image_nodestats_images_grain1_grain_image = image_nodestats_images_grain1_grain[\"grain_image\"]\n",
     "\n",
     "image_disordered_traces_grain1 = image_disordered_traces[\"grain_1\"]\n",
-    "image_disordered_traces_grain1_branch_indexes = image_disordered_traces_grain1[\"branch_indexes\"]\n",
-    "\n",
-    "\n"
+    "image_disordered_traces_grain1_branch_indexes = image_disordered_traces_grain1[\"branch_indexes\"]"
    ]
   },
   {
@@ -83,7 +81,44 @@
     "ax.imshow(image_nodestats_images_grain1_grain_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "ax.imshow(image_disordered_traces_grain1_branch_indexes_mask, cmap=\"Accent\", alpha=1)\n",
     "plt.axis(\"off\")\n",
-    "plt.savefig(figure_dir / f\"i19-fig-ordered-tracing-branch-indexes-grain-1.png\", bbox_inches=\"tight\")\n"
+    "plt.savefig(figure_dir / f\"i19-fig-ordered-tracing-branch-indexes-grain-1.png\", bbox_inches=\"tight\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "980ae698",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "ax.imshow(image_nodestats_images_grain1_grain_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "ordered_skeleton_mask = image_disordered_traces_grain1_branch_indexes.astype(bool)\n",
+    "ordered_skeleton_mask_ma = np.ma.masked_where(~ordered_skeleton_mask, ordered_skeleton_mask)\n",
+    "ax.imshow(ordered_skeleton_mask_ma, cmap=\"summer\", alpha=1)\n",
+    "\n",
+    "for node_id, node_image_data in image_nodestats_images_grain1[\"nodes\"].items():\n",
+    "    print(f\"node_id: {node_id}\")\n",
+    "    node_branch_mask = node_image_data[\"node_branch_mask\"]\n",
+    "    node_area_skeleton = node_image_data[\"node_area_skeleton\"]\n",
+    "    node_avg_mask = node_image_data[\"node_avg_mask\"]\n",
+    "\n",
+    "    # plt.imshow(node_branch_mask)\n",
+    "    # plt.title(f\"node_id: {node_id} branch mask\")\n",
+    "    # plt.show()\n",
+    "    # plt.imshow(node_area_skeleton)\n",
+    "    # plt.title(f\"node_id: {node_id} area skeleton\")\n",
+    "    # plt.show()\n",
+    "    # plt.imshow(node_avg_mask)\n",
+    "    # plt.title(f\"node_id: {node_id} avg mask\")\n",
+    "    # plt.show()\n",
+    "\n",
+    "    # make masked array for node branch mask\n",
+    "    node_branch_mask_ma = np.ma.masked_where(node_branch_mask == 0, node_branch_mask)\n",
+    "    ax.imshow(node_branch_mask_ma, cmap=\"cool\", alpha=1)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -94,7 +129,9 @@
    "outputs": [],
    "source": [
     "# colouring by molecule\n",
-    "cat_data_file = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/cats-images/output_fig_ordered_tracing_multi_molecule/processed/420231218_2ngSCcats.0_00179.topostats\")\n",
+    "cat_data_file = Path(\n",
+    "    \"/Users/sylvi/topo_data/topostats_2/datasets/cats-images/output_fig_ordered_tracing_multi_molecule/processed/420231218_2ngSCcats.0_00179.topostats\"\n",
+    ")\n",
     "\n",
     "loadscans = LoadScans(img_paths=[cat_data_file], channel=\"dummy\")\n",
     "loadscans.get_data()\n",
@@ -115,7 +152,7 @@
     "ax.imshow(cat_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "ax.plot(cat_ordered_coords_mol0[:, 1], cat_ordered_coords_mol0[:, 0], color=\"#2578B1\")\n",
     "ax.plot(cat_ordered_coords_mol1[:, 1], cat_ordered_coords_mol1[:, 0], color=\"#27B125\")\n",
-    "plt.savefig(figure_dir / f\"fig-ordered-tracing-molecules-cats-image\", bbox_inches=\"tight\")\n"
+    "plt.savefig(figure_dir / f\"fig-ordered-tracing-molecules-cats-image\", bbox_inches=\"tight\")"
    ]
   }
  ],
